Добавление метода перемещения в следующие колонки и метода возврата в предыдущую с указанием причины

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <div class="content_form">
                 <form @submit.prevent="addTask">
                     <label for="task-name">Создайте новую задачу:</label>
-                    <input  class="input" id="task-name" type="text" v-model="taskName"><br>
-                    <textarea id="task-desc" v-model="description"></textarea><br>
+                    <input  class="input" id="task-name" type="text" v-model="taskName"><br><br>
+                    <label for="task-desc">Описание задачи:</label>
+                    <textarea id="task-desc" v-model="description"></textarea><br><br>
                     <label for="deadline">Срок сдачи:</label>
                     <input type="date" id="deadline" v-model="deadline" name="deadline-task" min="2024-01-01" max="2025-12-31" required />
                     <button type="submit">Создать</button>
@@ -29,10 +30,10 @@
                     <span>Создано: {{task.createdDate }}</span>
                     <h3>{{ task.title }}</h3>
                     <p>{{task.description}}</p>
-                    <span>Срок сдачи: {{task.deadline}}</span>
+                    <span>Срок сдачи: {{task.deadline}}</span><br><br>
                     <button v-on:click="removeTask(task)" class="btn">Удалить</button>
                     <button  v-on:click="updateTask(task)">Редактировать</button>
-                    <button  v-on:click="moveTask(task)">Переместить</button>
+                    <button  v-on:click="moveFromPlanTask(task)"><i class="arrow right"></i></button>
                 </div>
 
 
@@ -42,18 +43,40 @@
             <div v-for="task in workTask" :key="task.id" class="task">
                 <span>Создано: {{task.createdDate }}</span>
                 <h3>{{ task.title }}</h3>
-                <p>{{task.description}}</p>
-                <span>Срок сдачи: {{task.deadline}}</span>
-
+                <p>{{task.description}}</p><br>
+                {{task.reason}}
+                <span>Срок сдачи: {{task.deadline}}</span><br><br>
                 <button  v-on:click="updateTask(task)">Редактировать</button>
+                <button  v-on:click="moveFromWorkTask(task)"><i class="arrow right"></i></button>
 
             </div>
         </div>
         <div class="column">
             <h2 class="title_column">Тестирование</h2>
+            <div v-for="task in testingTask" :key="task.id" class="task">
+                <span>Создано: {{task.createdDate }}</span>
+                <h3>{{ task.title }}</h3>
+                <p>{{task.description}}</p>
+                <span>Срок сдачи: {{task.deadline}}</span><br><br>
+                <button  v-on:click="updateTask(task)">Редактировать</button>
+                    <label >Укажите причину:</label>
+                    <input  type="text" v-model="task.reason"/><br><br>
+                    <button v-on:click="moveFromTestingTaskBack(task)" :disabled="task.reason === ''" ><i class="arrow left"></i></button>
+
+                <button v-on:click="moveFromTestingTask(task)"><i class="arrow right"></i></button>
+
+            </div>
         </div>
         <div class="column">
             <h2 class="title_column">Выполненные задачи</h2>
+            <div v-for="task in completedTask" :key="task.id" class="task">
+                <span>Создано: {{task.createdDate }}</span>
+                <h3>{{ task.title }}</h3>
+                <p>{{task.description}}</p>
+                <span>Срок сдачи: {{task.deadline}}</span><br><br>
+                <p :disabled="checked">Выполнено в срок!</p>
+                <p :disabled="!checked">Просрочено!</p>
+            </div>
         </div>
     </div>
 </div>
